--- a/test.yml
+++ b/test.yml
@@ -1,22 +1,19 @@
 apiVersion: apps/v1
-    kind: Deployment
+kind: Deployment
+metadata:
+  name: my-app
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: my-app
+  template:
     metadata:
-      name: nginx-deployment
-      namespace: test
       labels:
-        app: nginx
+        app: my-app
     spec:
-      replicas: 2
-      selector:
-        matchLabels:
-          app: nginx
-      template:
-        metadata:
-          labels:
-            app: nginx
-        spec:
-          containers:
-          - name: nginx
-            image: nginx:latest
-            ports:
+      containers:
+        - name: my-container
+          image: nginx
+          ports:
             - containerPort: 80
